--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-to-html-editor",
+  "name": "@matousek11/text-to-html-editor",
   "version": "1.0.0",
   "description": "Enter string and id of element, html valid article will be generated.",
   "main": "index.js",
