--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "author": "Lukas Matousek <matousek1199@gmail.com>",
   "license": "MIT",
-  "repository": "https://github.com/matousek11/text-to-html-editor.git"
+  "repository": "https://github.com/matousek11/text-to-html-editor.git",
+  "publishConfig": {
+    "@matousek11:registry": "https://npm.pkg.github.com"
+  },
+  "private": false
 }
