--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@matousek11/text-to-html-editor",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Enter string and id of element, html valid article will be generated.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Lukas Matousek <matousek1199@gmail.com>",
   "license": "MIT",
   "repository": "https://github.com/matousek11/text-to-html-editor.git",
   "publishConfig": {
     "@matousek11:registry": "https://npm.pkg.github.com"
   },
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "typescript": "^5.1.6"
+  }
 }
