--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matousek11/text-to-html-editor",
-  "version": "1.0.10",
+  "version": "1.0.13",
   "description": "Enter string and id of element, html valid article will be generated.",
   "main": "dist/index.js",
   "author": "Lukas Matousek <matousek1199@gmail.com>",
@@ -8,6 +8,9 @@
   "repository": "https://github.com/matousek11/text-to-html-editor.git",
   "publishConfig": {
     "@matousek11:registry": "https://npm.pkg.github.com"
+  },
+  "scripts": {
+    "publish-new-version": "tsc && npm publish"
   },
   "private": false,
   "devDependencies": {
